fix: pre tag now wraps

--- a/angular-frontend/src/styles.scss
+++ b/angular-frontend/src/styles.scss
@@ -69,3 +69,8 @@ a:hover {
   direction: ltr;
   -webkit-font-smoothing: antialiased;
 }
+
+
+.pre-wrap{
+  white-space: pre-wrap;
+}
